--- a/PROA - HISTORIA/exercicios/css/estilos.css
+++ b/PROA - HISTORIA/exercicios/css/estilos.css
@@ -39,5 +39,12 @@ nav{
     transition: 1s;
     top: 20px;
 }
+.dark-mode {
+    background-color: black;
+    color: white;}
+    .white-mode{
+        background-color: white;
+        color: black;
+    }
 /* fim do cabeçalho */
 
