--- a/PROA - HISTORIA/exercicios/css/estilos.css
+++ b/PROA - HISTORIA/exercicios/css/estilos.css
@@ -68,7 +68,9 @@ nav{
     background: rgb(20, 20, 19);
     color: white;
     transition: 0.7s;
-    top: 20px;
+    position: relative;
+    left: 38%;
+    top: 50%;
 }
 .botao2 {
     background-color: white;
@@ -83,7 +85,9 @@ nav{
     background: rgb(20, 20, 19);
     color: white;
     transition: 0.7s;
-    top: 20px;
+    position: relative;
+    left: 38%;
+    top: 50%;
 }
 
 /* texto */
